crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@primitive_types_in_cairo_m___u32_type.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Primitive Types in Cairo-M - U32 Type"
input_file: mdtest/01-basics/03-primitive-types.md
---
Source:
fn test_u32() -> u32 {
    let x: u32 = 100;
    let y: u32 = 200;
    return x + y;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_u32 {
    entry: 0

    0:
      %0 = 100 (u32)
      %1 = 200 (u32)
      %2 = %0 U32Add %1
      return %2

  }

}
